parser.y
%{ /*Пролог*/
#include "tree_nodes.h"
// Объявления предварительных функций и классов


%}

%union {
    char* str;
    int num;
}

%token INTERFACE
%token IMPLEMENTS

%token CONSTRUCTOR
%token NEW
%token EXTENDS
%token THIS
%token CLASS
%token STATIC
%token RETURN
%token DELETE
%token EXPORT

%token PUBLIC
%token PROTECTED
%token PRIVATE
%token READONLY

%token DO
%token IF
%token ELSE
%token FOR
%token OF
%token IN
%token WHILE
%token BREAK
%token CONTINUE
%token DEFAULT

%token SWITCH
%token CASE
%token TRY
%token CATCH

%token INCREMENT
%token DECREMENT

%token LET
%token CONST
%token FUNC
%token DECLARE

%token UNKNOWN
%token ANY
%token NUMBER
%token STRING
%token VOID
%token BOOLEAN
%token ENUM

%token NUMBER_LITERAL
%token STRING_LITERAL
%token TRUE_LITERAL
%token FALSE_LITERAL

%token ID



%left ';' ENDL
%right '=' PLUS_ASSIGN MINUS_ASSIGN MUL_ASSIGN DIV_ASSIGN MOD_ASSIGN
%left '[' ']'
%left '?'
%left  OR
%left  AND
%left EQUALS NOT_EQUALS '<' '>' LESS_OR_EQUAL GREATER_OR_EQUAL IS AS
%left '+' '-'
%left '*' '/' '%'
%right NEW
%right PREF_INCREMENT PREF_DECREMENT
%left POST_INCREMENT POST_DECREMENT
%left NOT UPLUS UMINUS
%left '.'
%nonassoc ')'

%start program

%%

// Определение стартового символа
program: program_elem
| program program_elem
;

program_elem: class_list
| function_declaration
;

endl: ENDL
| endl ENDL
;

endl_opt: /*empty*/
| endl
;

stmt_sep: ';'
| endl
;

expr_list: expr
| expr_list endl_opt ',' endl_opt expr
;

expr_list_opt: /*empty*/
| expr_list
;

expr: if_expr
| expr DECREMENT
| DECREMENT endl_opt expr
| expr INCREMENT
| INCREMENT endl_opt expr
| ID AS endl_opt type
| '-' endl_opt expr %prec UMINUS
| '+' endl_opt expr %prec UPLUS
;

if_expr: NUMBER_LITERAL
| STRING_LITERAL
| TRUE_LITERAL
| FALSE_LITERAL
| ID
| '(' endl_opt if_expr endl_opt ')'
| dot_expr endl_opt dot_method_opt
| ID '(' expr_list_opt ')'
| if_expr '+' endl_opt if_expr
| if_expr '-' endl_opt if_expr
| if_expr '*' endl_opt if_expr
| if_expr '/' endl_opt if_expr
| if_expr '%' endl_opt if_expr
| if_expr '<' endl_opt if_expr
| if_expr '>' endl_opt if_expr
| if_expr LESS_OR_EQUAL endl_opt if_expr
| if_expr GREATER_OR_EQUAL endl_opt if_expr
| if_expr EQUALS endl_opt if_expr
| if_expr NOT_EQUALS endl_opt if_expr
| if_expr '=' endl_opt if_expr
| if_expr PLUS_ASSIGN endl_opt if_expr
| if_expr MINUS_ASSIGN endl_opt if_expr
| if_expr MUL_ASSIGN endl_opt if_expr
| if_expr DIV_ASSIGN endl_opt if_expr
| if_expr MOD_ASSIGN endl_opt if_expr
| NOT endl_opt if_expr
| if_expr AND endl_opt if_expr
| if_expr OR endl_opt if_expr
| if_expr '?' endl_opt if_expr endl_opt ':' endl_opt if_expr
| ID dimensions_expr_list // Обращение к элементу массива
;

dot_expr: if_expr '.' endl_opt ID
;

dot_method_opt: /* empty */
| '(' endl_opt expr_list_opt endl_opt ')'
;

block_statement: '{' endl_opt stmt_list_opt '}'

if_stmt: IF endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt block_statement
| IF endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt if_expr
| IF endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt block_statement endl_opt ELSE endl_opt block_statement
;

while_stmt: WHILE endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt stmt
| WHILE endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt empty_stmt
;

do_while_stmt: DO endl_opt stmt endl_opt WHILE endl_opt '(' endl_opt expr endl_opt ')'
| DO endl_opt empty_stmt endl_opt WHILE endl_opt '(' endl_opt expr endl_opt ')'
;

for_stmt: FOR endl_opt '(' endl_opt expr endl_opt ';' endl_opt expr endl_opt ';' endl_opt if_expr endl_opt ')' endl_opt stmt
| FOR endl_opt '(' endl_opt if_expr endl_opt ';' endl_opt expr endl_opt ';' endl_opt expr endl_opt ')' endl_opt empty_stmt
;

switch_stmt: SWITCH endl_opt '(' endl_opt expr endl_opt ')' endl_opt '{' endl_opt case_list endl_opt '}'
;

case_list: case_stmt
| case_list case_stmt
;

case_stmt: CASE endl_opt expr endl_opt ':' endl_opt stmt endl_opt break_opt
| CASE endl_opt expr endl_opt ':' endl_opt empty_stmt endl_opt break_opt
| DEFAULT endl_opt ':' endl_opt stmt endl_opt break_opt
| DEFAULT endl_opt ':' endl_opt empty_stmt endl_opt break_opt
;

break_opt: /* empty */
| BREAK stmt_sep
;

return_statement: RETURN expr stmt_sep
;

function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt'}'
| FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
;

try_catch_block: TRY endl_opt block_statement endl_opt catch_clause
;

catch_clause: CATCH endl_opt '(' endl_opt ID endl_opt ')' endl_opt block_statement
| CATCH endl_opt '(' endl_opt ID endl_opt ':' endl_opt error_type endl_opt ')' endl_opt block_statement
;

error_type: UNKNOWN
| ANY
;

stmt_list_opt: /* empty */
| stmt_list endl_opt
;

stmt_list: stmt
| empty_stmt
| stmt_list stmt
| stmt_list empty_stmt
;

func_stmt_list_opt: /* empty */
| func_stmt_list
;

func_stmt_list: func_elem
| func_stmt_list func_elem
;

func_elem: func_stmt
| empty_stmt
;

stmt: expr stmt_sep
| if_stmt
| while_stmt
| for_stmt
| do_while_stmt stmt_sep
| switch_stmt
| try_catch_block
| block_statement
| var_declaration stmt_sep
| enum_declaration
;

func_stmt: return_statement
| stmt
;

empty_stmt: ';'
;

modifier: LET
| CONST
;

type: NUMBER
| STRING
| BOOLEAN
| ANY
| UNKNOWN
| VOID
| ID
;

type_mark: ':' endl_opt type
;

type_mark_opt: /* empty */
| type_mark
;

variable: ID endl_opt type_mark_opt
;

var_init_opt: /* empty */
| endl_opt '=' endl_opt expr
;

var_list: variable var_init_opt
| var_list endl_opt ',' endl_opt variable var_init_opt
;

var_declaration: modifier endl_opt var_list
| modifier ID endl_opt type_mark endl_opt dimensions_list // Объявление массива
| modifier ID endl_opt type_mark dimensions_list endl_opt '=' endl_opt '[' endl_opt expr_list_opt endl_opt ']' // Инициализация массива
;

dimensions: '[' endl_opt ']'
;

dimensions_list: dimensions
| dimensions_list dimensions
;

dimensions_expr: '[' endl_opt expr endl_opt ']'
;

dimensions_expr_list: dimensions_expr
| dimensions_expr_list endl_opt dimensions_expr
;

param: ID endl_opt type_mark
;

optional_param: ID endl_opt '?' endl_opt type_mark
;

param_list: param
| param_list endl_opt ',' endl_opt param
| optional_param
| param_list endl_opt ',' endl_opt optional_param
;

param_list_0_or_more: '(' endl_opt param_list endl_opt ')'
| '(' ')'
;

extends_decl: /* empty */
| EXTENDS endl_opt ID
;

implements_decl_opt: /* empty */
| implements_decl
;

implements_decl: IMPLEMENTS endl_opt ID
| implements_decl endl_opt ',' endl_opt ID
;

property_modifier: visibility
| visibility READONLY
| READONLY
| visibility STATIC
| STATIC
| visibility STATIC READONLY
;

visibility: PRIVATE
| PROTECTED
| PUBLIC
;

class_member: property_modifier expr endl_opt stmt_sep
| function_declaration
| class_declaration
;

class_visibility_member: class_member
| visibility endl_opt class_member
;

class_visibility_member_list: class_visibility_member
| class_visibility_member_list endl_opt class_visibility_member
;

class_body: /* empty */
| class_visibility_member_list
;

class_declaration: CLASS endl_opt ID endl_opt extends_decl endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'
;

class_list: class_declaration
| class_list class_declaration
;

enum_declaration: ENUM endl_opt ID endl_opt '{' endl_opt id_list endl_opt '}'
;

id_list: ID var_init_opt
| id_list endl_opt ',' endl_opt ID var_init_opt
;

%%
{/*Секция пользовательского кода*/}
