parser.output
Terminals unused in grammar

   INTERFACE
   CONSTRUCTOR
   NEW
   THIS
   DELETE
   EXPORT
   OF
   IN
   CONTINUE
   DECLARE
   CONSOLE
   IS
   PREF_DECREMENT
   PREF_INCREMENT
   POST_DECREMENT
   POST_INCREMENT


State 7 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 21 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce, 1 reduce/reduce
State 170 conflicts: 2 shift/reduce
State 173 conflicts: 1 shift/reduce
State 188 conflicts: 2 shift/reduce
State 189 conflicts: 2 shift/reduce
State 192 conflicts: 1 shift/reduce
State 195 conflicts: 2 shift/reduce
State 196 conflicts: 2 shift/reduce
State 197 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 231 conflicts: 1 shift/reduce
State 233 conflicts: 1 shift/reduce
State 262 conflicts: 1 shift/reduce, 1 reduce/reduce
State 277 conflicts: 1 shift/reduce, 1 reduce/reduce
State 280 conflicts: 1 shift/reduce
State 296 conflicts: 1 shift/reduce, 1 reduce/reduce
State 311 conflicts: 1 shift/reduce
State 331 conflicts: 1 shift/reduce
State 347 conflicts: 1 shift/reduce
State 357 conflicts: 1 shift/reduce
State 368 conflicts: 22 shift/reduce
State 388 conflicts: 1 shift/reduce
State 411 conflicts: 1 shift/reduce
State 446 conflicts: 1 shift/reduce
State 447 conflicts: 1 shift/reduce
State 461 conflicts: 1 shift/reduce
State 462 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_elem
    2        | program program_elem

    3 program_elem: class_list
    4             | function_declaration

    5 endl: ENDL
    6     | endl ENDL

    7 endl_opt: /* empty */
    8         | endl

    9 stmt_sep: ';'
   10         | endl

   11 expr_list: expr
   12          | expr_list endl_opt ',' endl_opt expr

   13 expr_list_opt: /* empty */
   14              | expr_list

   15 expr: if_expr
   16     | expr DECREMENT
   17     | DECREMENT endl_opt expr
   18     | expr INCREMENT
   19     | INCREMENT endl_opt expr
   20     | ID AS endl_opt type
   21     | '-' endl_opt expr
   22     | '+' endl_opt expr

   23 if_expr: NUMBER_LITERAL
   24        | STRING_LITERAL
   25        | TRUE_LITERAL
   26        | FALSE_LITERAL
   27        | ID
   28        | '(' endl_opt if_expr endl_opt ')'
   29        | if_expr '.' endl_opt ID
   30        | if_expr '.' endl_opt ID endl_opt '(' endl_opt expr_list_opt endl_opt ')'
   31        | ID '(' expr_list_opt ')'
   32        | if_expr '+' endl_opt if_expr
   33        | if_expr '-' endl_opt if_expr
   34        | if_expr '*' endl_opt if_expr
   35        | if_expr '/' endl_opt if_expr
   36        | if_expr '%' endl_opt if_expr
   37        | if_expr '<' endl_opt if_expr
   38        | if_expr '>' endl_opt if_expr
   39        | if_expr LESS_OR_EQUAL endl_opt if_expr
   40        | if_expr GREATER_OR_EQUAL endl_opt if_expr
   41        | if_expr EQUALS endl_opt if_expr
   42        | if_expr NOT_EQUALS endl_opt if_expr
   43        | if_expr '=' endl_opt if_expr
   44        | if_expr PLUS_ASSIGN endl_opt if_expr
   45        | if_expr MINUS_ASSIGN endl_opt if_expr
   46        | if_expr MUL_ASSIGN endl_opt if_expr
   47        | if_expr DIV_ASSIGN endl_opt if_expr
   48        | if_expr MOD_ASSIGN endl_opt if_expr
   49        | NOT endl_opt if_expr
   50        | if_expr AND endl_opt if_expr
   51        | if_expr OR endl_opt if_expr
   52        | if_expr '?' endl_opt if_expr endl_opt ':' endl_opt if_expr
   53        | if_expr '[' endl_opt expr_list endl_opt ']'
   54        | if_expr dimensions_expr_list

   55 block_statement: '{' endl_opt stmt_list_opt '}'

   56 if_stmt: IF endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt block_statement
   57        | IF endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt if_expr
   58        | IF endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt block_statement endl_opt ELSE endl_opt block_statement

   59 while_stmt: WHILE endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt stmt
   60           | WHILE endl_opt '(' endl_opt if_expr endl_opt ')' endl_opt empty_stmt

   61 do_while_stmt: DO endl_opt stmt endl_opt WHILE endl_opt '(' endl_opt expr endl_opt ')'
   62              | DO endl_opt empty_stmt endl_opt WHILE endl_opt '(' endl_opt expr endl_opt ')'

   63 for_stmt: FOR endl_opt '(' endl_opt expr endl_opt ';' endl_opt expr endl_opt ';' endl_opt if_expr endl_opt ')' endl_opt stmt
   64         | FOR endl_opt '(' endl_opt if_expr endl_opt ';' endl_opt expr endl_opt ';' endl_opt expr endl_opt ')' endl_opt empty_stmt

   65 switch_stmt: SWITCH endl_opt '(' endl_opt expr endl_opt ')' endl_opt '{' endl_opt case_list endl_opt '}'

   66 case_list: case_stmt
   67          | case_list case_stmt

   68 case_stmt: CASE endl_opt expr endl_opt ':' endl_opt stmt endl_opt break_opt
   69          | CASE endl_opt expr endl_opt ':' endl_opt empty_stmt endl_opt break_opt
   70          | DEFAULT endl_opt ':' endl_opt stmt endl_opt break_opt
   71          | DEFAULT endl_opt ':' endl_opt empty_stmt endl_opt break_opt

   72 break_opt: /* empty */
   73          | BREAK stmt_sep

   74 return_statement: RETURN expr stmt_sep

   75 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
   76                     | FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'

   77 try_catch_block: TRY endl_opt block_statement endl_opt catch_clause

   78 catch_clause: CATCH endl_opt '(' endl_opt ID endl_opt ')' endl_opt block_statement
   79             | CATCH endl_opt '(' endl_opt ID endl_opt ':' endl_opt error_type endl_opt ')' endl_opt block_statement

   80 error_type: UNKNOWN
   81           | ANY

   82 stmt_list_opt: /* empty */
   83              | stmt_list endl_opt

   84 stmt_list: stmt
   85          | empty_stmt
   86          | stmt_list stmt
   87          | stmt_list empty_stmt

   88 func_stmt_list_opt: /* empty */
   89                   | func_stmt_list

   90 func_stmt_list: func_elem
   91               | func_stmt_list func_elem

   92 func_elem: func_stmt
   93          | empty_stmt

   94 stmt: expr stmt_sep
   95     | if_stmt
   96     | while_stmt
   97     | for_stmt
   98     | do_while_stmt stmt_sep
   99     | switch_stmt
  100     | try_catch_block
  101     | block_statement
  102     | var_declaration stmt_sep
  103     | enum_declaration

  104 func_stmt: return_statement
  105          | stmt

  106 empty_stmt: ';'

  107 modifier: LET
  108         | CONST

  109 type: NUMBER
  110     | STRING
  111     | BOOLEAN
  112     | ANY
  113     | UNKNOWN
  114     | VOID
  115     | ID

  116 type_mark: ':' endl_opt type

  117 type_mark_opt: /* empty */
  118              | type_mark

  119 variable: ID endl_opt type_mark_opt

  120 var_init_opt: /* empty */
  121             | endl_opt '=' endl_opt expr

  122 var_list: variable var_init_opt
  123         | var_list endl_opt ',' endl_opt variable var_init_opt

  124 var_declaration: modifier endl_opt var_list
  125                | modifier ID endl_opt type_mark dimensions
  126                | modifier ID endl_opt type_mark endl_opt '[' endl_opt ']'
  127                | modifier ID endl_opt type_mark dimensions endl_opt '=' endl_opt '[' endl_opt expr_list_opt endl_opt ']'
  128                | modifier ID endl_opt type_mark endl_opt '[' endl_opt ']' endl_opt '=' endl_opt '[' expr_list_opt ']'

  129 dimensions: '[' endl_opt ']'
  130           | dimensions '[' endl_opt ']'

  131 dimensions_expr: '[' endl_opt expr endl_opt ']'

  132 dimensions_expr_list: dimensions_expr
  133                     | dimensions_expr_list endl_opt dimensions_expr

  134 param: ID endl_opt type_mark

  135 optional_param: ID endl_opt '?' endl_opt type_mark

  136 param_list: param
  137           | param_list endl_opt ',' endl_opt param
  138           | optional_param
  139           | param_list endl_opt ',' endl_opt optional_param

  140 param_list_0_or_more: '(' endl_opt param_list endl_opt ')'
  141                     | '(' ')'

  142 extends_decl: /* empty */
  143             | EXTENDS endl_opt ID

  144 implements_decl_opt: /* empty */
  145                    | implements_decl

  146 implements_decl: IMPLEMENTS endl_opt ID
  147                | implements_decl endl_opt ',' endl_opt ID

  148 property_modifier: visibility
  149                  | visibility READONLY
  150                  | READONLY
  151                  | visibility STATIC
  152                  | STATIC
  153                  | visibility STATIC READONLY

  154 visibility: PRIVATE
  155           | PROTECTED
  156           | PUBLIC

  157 class_member: property_modifier expr endl_opt stmt_sep
  158             | function_declaration
  159             | class_declaration

  160 class_visibility_member: class_member
  161                        | visibility endl_opt class_member

  162 class_visibility_member_list: class_visibility_member
  163                             | class_visibility_member_list endl_opt class_visibility_member

  164 class_body: /* empty */
  165           | class_visibility_member_list

  166 class_declaration: CLASS endl_opt ID endl_opt extends_decl endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

  167 class_list: class_declaration
  168           | class_list class_declaration

  169 enum_declaration: ENUM endl_opt ID endl_opt '{' endl_opt id_list endl_opt '}'

  170 id_list: ID var_init_opt
  171        | id_list endl_opt ',' endl_opt ID var_init_opt


Terminals, with rules where they appear

$end (0) 0
'%' (37) 36
'(' (40) 28 30 31 56 57 58 59 60 61 62 63 64 65 78 79 140 141
')' (41) 28 30 31 56 57 58 59 60 61 62 63 64 65 78 79 140 141
'*' (42) 34
'+' (43) 22 32
',' (44) 12 123 137 139 147 171
'-' (45) 21 33
'.' (46) 29 30
'/' (47) 35
':' (58) 52 68 69 70 71 79 116
';' (59) 9 63 64 106
'<' (60) 37
'=' (61) 43 121 127 128
'>' (62) 38
'?' (63) 52 135
'[' (91) 53 126 127 128 129 130 131
']' (93) 53 126 127 128 129 130 131
'{' (123) 55 65 75 76 166 169
'}' (125) 55 65 75 76 166 169
error (256)
INTERFACE (258)
IMPLEMENTS (259) 146
CONSTRUCTOR (260)
NEW (261)
EXTENDS (262) 143
THIS (263)
CLASS (264) 166
STATIC (265) 151 152 153
RETURN (266) 74
DELETE (267)
EXPORT (268)
PUBLIC (269) 156
PROTECTED (270) 155
PRIVATE (271) 154
READONLY (272) 149 150 153
DO (273) 61 62
IF (274) 56 57 58
ELSE (275) 58
FOR (276) 63 64
OF (277)
IN (278)
WHILE (279) 59 60 61 62
BREAK (280) 73
CONTINUE (281)
DEFAULT (282) 70 71
SWITCH (283) 65
CASE (284) 68 69
TRY (285) 77
CATCH (286) 78 79
INCREMENT (287) 18 19
DECREMENT (288) 16 17
LET (289) 107
CONST (290) 108
FUNC (291) 75 76
DECLARE (292)
UNKNOWN (293) 80 113
ANY (294) 81 112
NUMBER (295) 109
STRING (296) 110
VOID (297) 114
BOOLEAN (298) 111
ENUM (299) 169
NUMBER_LITERAL (300) 23
STRING_LITERAL (301) 24
TRUE_LITERAL (302) 25
FALSE_LITERAL (303) 26
ID (304) 20 27 29 30 31 75 76 78 79 115 119 125 126 127 128 134 135
    143 146 147 166 169 170 171
CONSOLE (305)
ENDL (306) 5 6
MOD_ASSIGN (307) 48
DIV_ASSIGN (308) 47
MUL_ASSIGN (309) 46
MINUS_ASSIGN (310) 45
PLUS_ASSIGN (311) 44
OR (312) 51
AND (313) 50
AS (314) 20
IS (315)
GREATER_OR_EQUAL (316) 40
LESS_OR_EQUAL (317) 39
NOT_EQUALS (318) 42
EQUALS (319) 41
PREF_DECREMENT (320)
PREF_INCREMENT (321)
POST_DECREMENT (322)
POST_INCREMENT (323)
UMINUS (324)
UPLUS (325)
NOT (326) 49


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
program (92)
    on left: 1 2, on right: 0 2
program_elem (93)
    on left: 3 4, on right: 1 2
endl (94)
    on left: 5 6, on right: 6 8 10
endl_opt (95)
    on left: 7 8, on right: 12 17 19 20 21 22 28 29 30 32 33 34 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 55 56 57
    58 59 60 61 62 63 64 65 68 69 70 71 75 76 77 78 79 83 116 119 121
    123 124 125 126 127 128 129 130 131 133 134 135 137 139 140 143
    146 147 157 161 163 166 169 171
stmt_sep (96)
    on left: 9 10, on right: 73 74 94 98 102 157
expr_list (97)
    on left: 11 12, on right: 12 14 53
expr_list_opt (98)
    on left: 13 14, on right: 30 31 127 128
expr (99)
    on left: 15 16 17 18 19 20 21 22, on right: 11 12 16 17 18 19 21
    22 61 62 63 64 65 68 69 74 94 121 131 157
if_expr (100)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54, on right: 15 28 29 30
    32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 56 57 58 59 60 63 64
block_statement (101)
    on left: 55, on right: 56 58 77 78 79 101
if_stmt (102)
    on left: 56 57 58, on right: 95
while_stmt (103)
    on left: 59 60, on right: 96
do_while_stmt (104)
    on left: 61 62, on right: 98
for_stmt (105)
    on left: 63 64, on right: 97
switch_stmt (106)
    on left: 65, on right: 99
case_list (107)
    on left: 66 67, on right: 65 67
case_stmt (108)
    on left: 68 69 70 71, on right: 66 67
break_opt (109)
    on left: 72 73, on right: 68 69 70 71
return_statement (110)
    on left: 74, on right: 104
function_declaration (111)
    on left: 75 76, on right: 4 158
try_catch_block (112)
    on left: 77, on right: 100
catch_clause (113)
    on left: 78 79, on right: 77
error_type (114)
    on left: 80 81, on right: 79
stmt_list_opt (115)
    on left: 82 83, on right: 55
stmt_list (116)
    on left: 84 85 86 87, on right: 83 86 87
func_stmt_list_opt (117)
    on left: 88 89, on right: 75 76
func_stmt_list (118)
    on left: 90 91, on right: 89 91
func_elem (119)
    on left: 92 93, on right: 90 91
stmt (120)
    on left: 94 95 96 97 98 99 100 101 102 103, on right: 59 61 63
    68 70 84 86 105
func_stmt (121)
    on left: 104 105, on right: 92
empty_stmt (122)
    on left: 106, on right: 60 62 64 69 71 85 87 93
modifier (123)
    on left: 107 108, on right: 124 125 126 127 128
type (124)
    on left: 109 110 111 112 113 114 115, on right: 20 116
type_mark (125)
    on left: 116, on right: 75 118 125 126 127 128 134 135
type_mark_opt (126)
    on left: 117 118, on right: 119
variable (127)
    on left: 119, on right: 122 123
var_init_opt (128)
    on left: 120 121, on right: 122 123 170 171
var_list (129)
    on left: 122 123, on right: 123 124
var_declaration (130)
    on left: 124 125 126 127 128, on right: 102
dimensions (131)
    on left: 129 130, on right: 125 127 130
dimensions_expr (132)
    on left: 131, on right: 132 133
dimensions_expr_list (133)
    on left: 132 133, on right: 54 133
param (134)
    on left: 134, on right: 136 137
optional_param (135)
    on left: 135, on right: 138 139
param_list (136)
    on left: 136 137 138 139, on right: 137 139 140
param_list_0_or_more (137)
    on left: 140 141, on right: 75 76
extends_decl (138)
    on left: 142 143, on right: 166
implements_decl_opt (139)
    on left: 144 145, on right: 166
implements_decl (140)
    on left: 146 147, on right: 145 147
property_modifier (141)
    on left: 148 149 150 151 152 153, on right: 157
visibility (142)
    on left: 154 155 156, on right: 148 149 151 153 161
class_member (143)
    on left: 157 158 159, on right: 160 161
class_visibility_member (144)
    on left: 160 161, on right: 162 163
class_visibility_member_list (145)
    on left: 162 163, on right: 163 165
class_body (146)
    on left: 164 165, on right: 166
class_declaration (147)
    on left: 166, on right: 159 167 168
class_list (148)
    on left: 167 168, on right: 3 168
enum_declaration (149)
    on left: 169, on right: 103
id_list (150)
    on left: 170 171, on right: 169 171


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1
    FUNC   shift, and go to state 2

    program               go to state 3
    program_elem          go to state 4
    function_declaration  go to state 5
    class_declaration     go to state 6
    class_list            go to state 7


State 1

  166 class_declaration: CLASS . endl_opt ID endl_opt extends_decl endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

    ENDL  shift, and go to state 8

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 10


State 2

   75 function_declaration: FUNC . endl_opt ID endl_opt param_list_0_or_more endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
   76                     | FUNC . endl_opt ID endl_opt param_list_0_or_more endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'

    ENDL  shift, and go to state 8

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 11


State 3

    0 $accept: program . $end
    2 program: program . program_elem

    $end   shift, and go to state 12
    CLASS  shift, and go to state 1
    FUNC   shift, and go to state 2

    program_elem          go to state 13
    function_declaration  go to state 5
    class_declaration     go to state 6
    class_list            go to state 7


State 4

    1 program: program_elem .

    $default  reduce using rule 1 (program)


State 5

    4 program_elem: function_declaration .

    $default  reduce using rule 4 (program_elem)


State 6

  167 class_list: class_declaration .

    $default  reduce using rule 167 (class_list)


State 7

    3 program_elem: class_list .
  168 class_list: class_list . class_declaration

    CLASS  shift, and go to state 1

    CLASS     [reduce using rule 3 (program_elem)]
    $default  reduce using rule 3 (program_elem)

    class_declaration  go to state 14


State 8

    5 endl: ENDL .

    $default  reduce using rule 5 (endl)


State 9

    6 endl: endl . ENDL
    8 endl_opt: endl .

    ENDL  shift, and go to state 15

    ENDL      [reduce using rule 8 (endl_opt)]
    $default  reduce using rule 8 (endl_opt)


State 10

  166 class_declaration: CLASS endl_opt . ID endl_opt extends_decl endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

    ID  shift, and go to state 16


State 11

   75 function_declaration: FUNC endl_opt . ID endl_opt param_list_0_or_more endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
   76                     | FUNC endl_opt . ID endl_opt param_list_0_or_more endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'

    ID  shift, and go to state 17


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 program: program program_elem .

    $default  reduce using rule 2 (program)


State 14

  168 class_list: class_list class_declaration .

    $default  reduce using rule 168 (class_list)


State 15

    6 endl: endl ENDL .

    $default  reduce using rule 6 (endl)


State 16

  166 class_declaration: CLASS endl_opt ID . endl_opt extends_decl endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

    ENDL  shift, and go to state 8

    ENDL      [reduce using rule 7 (endl_opt)]
    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 18


State 17

   75 function_declaration: FUNC endl_opt ID . endl_opt param_list_0_or_more endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
   76                     | FUNC endl_opt ID . endl_opt param_list_0_or_more endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'

    ENDL  shift, and go to state 8

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 19


State 18

  166 class_declaration: CLASS endl_opt ID endl_opt . extends_decl endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

    EXTENDS  shift, and go to state 20

    $default  reduce using rule 142 (extends_decl)

    extends_decl  go to state 21


State 19

   75 function_declaration: FUNC endl_opt ID endl_opt . param_list_0_or_more endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
   76                     | FUNC endl_opt ID endl_opt . param_list_0_or_more endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'

    '('  shift, and go to state 22

    param_list_0_or_more  go to state 23


State 20

  143 extends_decl: EXTENDS . endl_opt ID

    ENDL  shift, and go to state 8

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 24


State 21

  166 class_declaration: CLASS endl_opt ID endl_opt extends_decl . endl_opt implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

    ENDL  shift, and go to state 8

    ENDL      [reduce using rule 7 (endl_opt)]
    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 25


State 22

  140 param_list_0_or_more: '(' . endl_opt param_list endl_opt ')'
  141                     | '(' . ')'

    ENDL  shift, and go to state 8
    ')'   shift, and go to state 26

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 27


State 23

   75 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more . endl_opt type_mark endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'
   76                     | FUNC endl_opt ID endl_opt param_list_0_or_more . endl_opt '{' endl_opt func_stmt_list_opt endl_opt '}'

    ENDL  shift, and go to state 8

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 9
    endl_opt  go to state 28


State 24

  143 extends_decl: EXTENDS endl_opt . ID

    ID  shift, and go to state 29


State 25

  166 class_declaration: CLASS endl_opt ID endl_opt extends_decl endl_opt . implements_decl_opt endl_opt '{' endl_opt class_body endl_opt '}'

    IMPLEMENTS  shift, and go to state 30

    $default  reduce using rule 144 (implements_decl_opt)

    implements_decl_opt  go to state 31
    implements_decl      go to state 32


State 26

  141 param_list_0_or_more: '(' ')' .

    $default  reduce using rule 141 (param_list_0_or_more)


State 27

  140 param_list_0_or_more: '(' endl_opt . param_list endl_opt ')'

    ID  shift, and go to state 33

    param           go to state 34
    optional_param  go to state 35
    param_list      go to state 36


State 28
